--- a/ashish-aspire/src/assets/scss/main.scss
+++ b/ashish-aspire/src/assets/scss/main.scss
@@ -1,8 +1,161 @@
 @import '../../../node_modules/primeflex/primeflex.scss';
 @import '../../../node_modules/primeicons/primeicons.css';
 
+body{
+    margin: 0 !important;
+    padding: 0 !important;
+}
+#app{
+    margin-top: 0 !important;
+}
 .credit-card{
     background-color: #01D167;
     border-radius: 0.5rem !important;
     border-color: #01D167 !important;
+    width: 414px;
+    // height: 248px;
+}
+.credit-card img{
+    margin-left: 303px;
+}
+.credit-card .card-details{
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    color: #fff;
+    gap: 30.86px;
+}
+.credit-card .user_name{
+    color: #ffff;
+    font-size: 24px;
+    text-align: left;
+    letter-spacing: 2px;
+}
+.card_number{
+    color: #ffff;
+    font-size: 14px;
+    letter-spacing: 5px;
+}
+.credit-card .card-details .cvv{
+    display: flex;
+    gap: 36.12px;
+    letter-spacing: 2px;
+}
+.sidebar-nav{
+    background-color: #0C365A;
+    width: 340px;
+    height: 740px;
+}
+.card-management{
+    display: flex;
+    justify-content: flex-start;
+    gap: 60px ;
+}
+.aspire-logo{
+    margin-top: 48px;
+    text-align: left;
+    margin-left: 48px;
+}
+.tagline{
+    color: #FFFFFF;
+    opacity: 30%;
+    font-size: 15px;
+    padding-right: 55px;
+    margin-top: 19px;
+}
+.menu-bar{
+    width: 114px;
+    margin-left: 48px;
+    margin-top: 81px;
+}
+.menu{
+    text-align: left;
+    height: 24px;
+    margin-bottom: 61px;
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    cursor: pointer;
+}
+.active-menu{
+    color: #01D167 !important;
+}
+.menu span{
+    color: #FFFFFF;
+    font-size: 16px;
+}
+.card-tabs .p-tabview-nav{
+    gap: 22px;
+}
+.icon-doller{
+    width: 40px;
+    height: 24px;
+    background-color: #01D167;
+    border-radius: 0.3rem;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    color: #ffff;
+    font-size: 13px;
+}
+.dashboard{
+    padding-top: 59px;
+    width: calc(100% - 340px);
+    margin-right: 72px;
+}
+.balance{
+    text-align: left;
+}
+.balance-card{
+    display: flex;  
+}
+.amount{
+    display: flex;
+    gap: 12px;
+    align-items: center;
+    margin-top: 9px;
+}
+.amount span{
+    font-weight: bold;
+    font-size: 26px;
+}
+.card-tabs{
+    margin-top: 34px;
+}
+.card{
+    border-radius: 0.5rem;
+    margin-top: 16px;
+    padding-top: 31.5px;
+    height: 767px;
+}
+.show-card-number span{
+    color: #01D167;
+    font-size: 12px;
+    font-weight: bold;
+}
+.show-card-number{
+    margin-right: 3rem;
+    cursor: pointer;
+}
+.new-card-btn{
+    background-color: #325BAF;
+    border: none;
+    width: 109px;
+    height: 35px;
+    color: #fff;
+    border-radius: 0.3rem;
+    align-self: end;
+    margin-left: auto;
+}
+.new-card-btn span{
+    font-size: 13px;
+    font-weight: bold;
+}
+.new-card-btn .p-button-label{
+    margin-left: 8px;
+}
+.p-carousel {
+    width: 460px;
+    margin-left: 40px;
 }
